pod-security/ingress/deployment-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: front-end

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
  labels:
    app: nginx-src
    env: uat
  namespace: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      version: "3"
      app: pointing-it
  template:
    metadata:
      name: testtemp
      labels:
        app: pointing-it
        version: "3"
    spec:
      containers:
        - name: testcont
          image: centos:latest
          command: ["sh", "-c", "while true; do sleep 3600; done"]
          ports:
            - containerPort: 80
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-traffic
  namespace: front-end
spec:
  podSelector: 
    matchLabels:
      app: nginx-src
  policyTypes:
    - Ingress
  ingress:
    -  from:
         -  podSelector:
              matchLabels:
                app: testcont
       ports:
          - port: 80
            protocol: TCP
